--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -4,15 +4,15 @@ build:
   os: "ubuntu-24.04"
   tools:
     python: "3.10"
-
-python:
-  install:
-  - method: pip
-    path: .
-    extra_requirements:
-    - docs
-  - method: pip
-    path: docs/plugins/nav_hide_children
+  jobs:
+    create_environment:
+    - asdf plugin add uv
+    - asdf install uv latest
+    - asdf global uv latest
+    - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --all-extras --group docs
+    - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv pip install -e docs/plugins/nav_hide_children
+    install:
+    - "true"
 
 mkdocs:
   configuration: mkdocs.yml
