--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,10 +5,8 @@ build:
   tools:
     python: "3.10"
   jobs:
-    create_environment:
-    - asdf plugin add uv
-    - asdf install uv latest
-    - asdf global uv latest
+    post_install:
+    - pip install uv
     - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --all-extras --group docs
     - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv pip install -e docs/plugins/nav_hide_children
     install:
