--- a/.readthedocs.yaml
+++ b/.readthedocs.yaml
@@ -5,10 +5,14 @@ build:
   tools:
     python: "3.10"
   jobs:
-    post_install:
-    - pip install uv
-    - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv sync --only-group docs
-    - UV_PROJECT_ENVIRONMENT=$READTHEDOCS_VIRTUALENV_PATH uv pip install -e docs/plugins/nav_hide_children
+    pre_create_environment:
+    - asdf plugin add uv
+    - asdf install uv latest
+    - asdf global uv latest
+    create_environment:
+    - uv venv doc_env
+    install:
+    - UV_PROJECT_ENVIRONMENT=doc_env uv sync --frozen --group docs
 
 mkdocs:
   configuration: mkdocs.yml
