--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -46,17 +46,8 @@ jobs:
         enable-cache: true
         cache-dependency-glob: "**/pyproject.toml"
 
-    - name: Setup Virtual Env
-      run: |
-        uv venv --seed .venv
-        if [[ "${{ inputs.os }}" == "windows" ]]; then
-          echo "$GITHUB_WORKSPACE/.venv/Scripts" >> $GITHUB_PATH
-          .venv\Scripts\activate
-        else
-          echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
-          source .venv/bin/activate
-        fi
-        uv pip install twine yq setuptools_scm
+    - name: Install dependencies
+      run: uv pip install twine yq setuptools_scm
 
     - uses: oven-sh/setup-bun@v2
       with:
