--- a/.github/workflows/build-wheel.yml
+++ b/.github/workflows/build-wheel.yml
@@ -50,9 +50,11 @@ jobs:
       run: |
         uv venv --seed .venv
         if [[ "${{ inputs.os }}" == "windows" ]]; then
-          .\.venv\Scripts\activate
+          echo "$GITHUB_WORKSPACE/.venv/Scripts" >> $GITHUB_PATH
+          .venv\Scripts\activate
         else
-          source .venv\bin\activate
+          echo "$GITHUB_WORKSPACE/.venv/bin" >> $GITHUB_PATH
+          source .venv/bin/activate
         fi
         uv pip install twine yq setuptools_scm
 
@@ -73,7 +75,6 @@ jobs:
 
     - name: Configure RUSTFLAGS for x86
       if: ${{ (inputs.arch == 'x86_64') }}
-      shell: bash
       run: |
         if [[ "${{ inputs.lts }}" == "true" ]]; then
           echo "RUSTFLAGS=-C target-feature=+sse3,+ssse3,+sse4.1,+sse4.2,+popcnt,+cmpxchg16b" >> $GITHUB_ENV && \
@@ -85,7 +86,6 @@ jobs:
 
     - name: Build dashboard with Bun
       working-directory: ./src/daft-dashboard/frontend
-      shell: bash
       run: |
         bun install
         bun run build
